# translator-space-file-service

./: .gitignore  Dockerfile  README.md  docker-compose.yml
src/: CMakeLists.txt  main.cpp
src/proto/: main.proto
